In the spirit of practiaclity, I probably just broke everything, but, if not, I have resolved a text-wrap issue. Again.

--- a/Website/Game/css/gameStyle.css
+++ b/Website/Game/css/gameStyle.css
@@ -52,6 +52,7 @@ canvas {
   cursor: default;
   word-wrap:break-word;
   width: inherit;
+  margin-bottom: 6em;
 }
 
 .answer {
@@ -64,6 +65,7 @@ canvas {
   cursor: default;
   word-wrap:break-word;
   width: inherit;
+  margin-bottom: 6em;
 }
 
 .loading {
